--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,7 @@
     <title>Google Server-Side Auth Example</title>
     <script src="/public/vendors/angular.min.js"></script>
     <script src="/public/vendors/angular-route.min.js"></script>
-    <script src="/public/scripts/app.js"></script>
+    <script src="/public/scripts/client.js"></script>
     <script src="/public/scripts/services/authFactory.js"></script>
     <script src="/public/scripts/controllers/navController.js"></script>
     <script src="/public/scripts/controllers/authController.js"></script>
