updated form questions

--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -1,26 +1,41 @@
-<!DOCTYPE html>
-<html>
+<DIV class = "container" ng-init="">
 
-<head>
-    <meta charset="utf-8">
-    <title>Student Feedback Test</title>
-    <script src="script.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="styles.css"> </head>
-
-<body>
-    <img src="" />
     <h1>Step Up Check In : Week 1</h1>
+
     <h3>Question 1: To what extent do you feel properly trained for your internship? </h3>
-    1, not properly trained at all <input type="radio"> 2, not properly trained<input type="radio"> 3, somewhat properly trained<input type="radio"> 4, properly trained<input type="radio"> 5, very properly trained<input type="radio">
+    <input type="radio">1, not properly trained at all <br />
+    <input type="radio">2, not properly trained <br />
+    <input type="radio">3, somewhat properly trained<br />
+    <input type="radio">4, properly trained<br />
+    <input type="radio">5, very properly trained<br />
 
     <h3>Question 2: How challenging are your daily work tasks? </h3>
-    1 <input type="radio"> 2<input type="radio"> 3<input type="radio"> 4<input type="radio"> 5<input type="radio">
+    <input type="radio">1, not challenging at all<br />
+    <input type="radio">2, not very challenging<br />
+    <input type="radio">3, somewhat challenging<br />
+    <input type="radio">4, challenging<br />
+    <input type="radio">5, challenging<br />
 
-    <h3>Question 3: How supportive is your supervisor? </h3> 1 <input type="radio"> 2<input type="radio"> 3<input type="radio"> 4<input type="radio"> 5<input type="radio">
+    <h3>Question 3: How supportive is your supervisor? </h3>
+    <input type="radio">1, not supportive at all<br />
+    <input type="radio">2, not very supportive<br />
+    <input type="radio">3, somewhat supportive<br />
+    <input type="radio">4, supportive<br />
+    <input type="radio">5, very supportive<br />
 
-    <h3>Question 4: Do you like your internship? </h3> 1 <input type="radio"> 2<input type="radio"> 3<input type="radio"> 4<input type="radio"> 5<input type="radio">
+    <h3>Question 4: Do you like your internship? </h3>
+    <input type="radio">1, I do not like my internship at all<br />
+    <input type="radio">2, I don't really like my internship<br />
+    <input type="radio">3, My internship is okay<br />
+    <input type="radio">4, I like my internship<br />
+    <input type="radio">5, I like my internship very much!<br />
 
-    <h3>Question 5: Do you feel welcome in your workplace? </h3> 1 <input type="radio"> 2<input type="radio"> 3<input type="radio"> 4<input type="radio"> 5<input type="radio">
+    <h3>Question 5: Do you feel welcome in your workplace? </h3>
+    <input type="radio">1, I do not feel welcome in my workplace at all<br />
+    <input type="radio">2, I do not feel very welcome in my workplace<br />
+    <input type="radio">3, I feel somewhat welcome in my workplace<br />
+    <input type="radio">4, I feel welcome in my workplace<br />
+    <input type="radio">5, I feel very welcome in my workplace<br />
 
     <br />
     <h3>Do you want someone from STEP-UP to contact you this week?</h3>
@@ -30,15 +45,9 @@
 
     <h3>Do you have any other comments?</h3>
 
-    <input type="text" placeholder="comments here please" name="" value="">
+    <input type="text" placeholder="write comments here" name="" value="">
     <br />
 
     <button>Submit</button>
 
-    </menu>
-
-
-
-</body>
-
-</html>
+</DIV>
