--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,6 +10,7 @@
     <script src="/public/scripts/controllers/authController.js"></script>
     <script src="/public/scripts/controllers/calendarController.js"></script>
     <link rel="stylesheet" type="text/css" href="/public/vendors/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="/public/styles/style.css">
 </head>
 
 <body>
