--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,12 +5,21 @@
     <script src="/public/vendors/angular.min.js"></script>
     <script src="/public/vendors/angular-route.min.js"></script>
     <script src="/public/scripts/client.js"></script>
+    <script src="public/scripts/services/adminHomeService.js" charset="utf-8"></script>
+    <script src="public/scripts/services/adminInternService.js" charset="utf-8"></script>
     <script src="/public/scripts/services/authFactory.js"></script>
-    <script src="/public/scripts/controllers/navController.js"></script>
+    <script src="public/scripts/services/importExportService.js" charset="utf-8"></script>
+    <script src="public/scripts/services/updateQuestionsService.js" charset="utf-8"></script>
+    <script src="public/scripts/controllers/adminHomeController.js" charset="utf-8"></script>
+    <script src="public/scripts/controllers/adminInternController.js" charset="utf-8"></script>
     <script src="/public/scripts/controllers/authController.js"></script>
-    <script src="/public/scripts/controllers/calendarController.js"></script>
+    <script src="public/scripts/controllers/feedBackFormController.js" charset="utf-8"></script>
+    <script src="public/scripts/controllers/ImportExportController.js" charset="utf-8"></script>
+    <script src="/public/scripts/controllers/navController.js"></script>
+    <script src="public/scripts/controllers/updateQuestionsController.js" charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="/public/vendors/normalize.css" />
     <link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+    <base href="/">
 </head>
 
 <body>
@@ -20,14 +29,15 @@
         <header ng-controller="NavController as nav">
             <h1>Step Up Check In</h1>
             <nav id="homepage">
-                <a href="#home">Home</a>
-                <a href="#interns">Interns</a>
-                <a href="#questions">Update Questions</a>
-                <a href="#importexport">Import/Export</a>
-                <a href="#feedback">Feedback</a>
+              <ul>
+                <a href="#admin-home">Home</a>
+                <a href="#admin-intern">Interns</a>
+                <a href="#updateQuestions">Update Questions</a>
+                <a href="#importExport">Import/Export</a>
+                <a href="#feedbackform">Feedback</a>
                 <a href="#" ng-click="nav.logout()">Logout</a>
                 <li class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></li>
-                </ul>
+              </ul>
             </nav>
             <!-- Show a helpful message when needed -->
             <section id="message" class="nav.message.type" ng-show="nav.message.text">
