--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -45,6 +45,10 @@ a:visited {
   color: #F68628;
 }
 
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 /***************************
 admin-home
 ****************************/
@@ -59,6 +63,10 @@ admin-intern
 feddbackform
 ****************************/
 
+/*//attempts to style the radio button*/
+/*input[type='radio'] {
+    transform: scale(2);
+}*/
 
 /***************************
 Import-Export
