--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="/public/styles/style.css">
     <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
