--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,6 +14,7 @@
     <script src="public/scripts/services/adminHomeService.js" charset="utf-8"></script>
     <script src="public/scripts/services/adminInternService.js" charset="utf-8"></script>
     <script src="/public/scripts/services/authFactory.js"></script>
+    <script src="public/scripts/services/feedBackFormService.js" charset="utf-8"></script>
     <script src="public/scripts/services/importExportService.js" charset="utf-8"></script>
     <script src="public/scripts/services/updateQuestionsService.js" charset="utf-8"></script>
     <script src="public/scripts/controllers/adminHomeController.js" charset="utf-8"></script>
