--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -2,7 +2,7 @@
   <div class="importExport">
     <h1>Import/Export</h1>
   </div>
-  <h2>Add CRV file</h2><button type="button" name="button">Import</button>
+  <h2>Add CRV file</h2><button ng-click="IEC.importCsv()" type="button" name="button">Import</button>
   <h2>Export Response Data</h2><button type="button" name="button">Export</button>
   <br><br><br><br>
   <h2>Remove Interns:</h2>
