sourced angular material correctly

--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -19,8 +19,8 @@
 	</md-content>
 </div>
 <h2>Add new Admin</h2>
-<div>
-	<md-content md-theme="docs-dark" layout-gt-sm="row" layout-padding>
+<div md-theme="docs-dark" layout-gt-sm="row" layout-padding>
+	<md-content>
 		<md-input-container>
 			<label>First Name</label>
 			<input type="name">
@@ -35,6 +35,6 @@
 			<label>Email</label>
 			<input type="email">
 		</md-input-container>
-		<button md-button>Add New Admin</button>
+    <button md-button>Add New Admin</button>
 	</md-content>
 </div>
