questions route running

--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -2,6 +2,8 @@
 
     <h1>Step Up Check In : Week 1</h1>
 
+    <button ng-click="FBFC.getQuestions()">Get Questions</button>
+
     <h3>Question 1: To what extent do you feel properly trained for your internship? </h3>
     <input type="radio" value = "1" ng-model="FBFC.q1response"> 1, not properly trained at all <br />
     <input type="radio" value = "2" ng-model="FBFC.q1response"> 2, not properly trained <br />
