--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -1,6 +1,6 @@
 <main class="container" ng-app="theGoogles">
   <md-toolbar layout="column">
-  	<h1>Step-Up Check-In</h1>
+    <h1>Step-Up Check-In</h1>
   </md-toolbar>
   <div class="importExport">
     <h1>Import/Export</h1>
@@ -12,7 +12,7 @@
   <h3>Lastname: </h3>
   <md-input-container>
     <label>Search by Lastname</label>
-    <input ng-model="IEC.nameIn" type="search">
+    <input ng-model="IEC.lastNameIn" type="text">
+    <button ng-click="IEC.searchByLastName(IEC.lastNameIn)" type="button" name="button" md-button>Submit</button>
   </md-input-container>
-  <button ng-click="IEC.searchByLastName()" type="button" name="button" md-button>Submit</button>
 </main>
