start add question

--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -8,8 +8,8 @@
     <h3>Q5 <select class="" name="" style="width:10vmax"></select></h3>
     <button type="button" name="button">Save Weekly Questions</button>
     <h2>Create New Question:</h2>
-    <input type="text" name="" value=""><button type="button" name="button">Add Question</button>
+    <input type="text" name="" value=""><button ng-click ="UQC.addQuestion()">Add Question</button>
     <br><br><br>
-    <button type="button" name="button">Send This Week's Questions</button>
+    <button>Send This Week's Questions</button>
   </div>
 </main>
