--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -16,7 +16,7 @@
     <button ng-click="IEC.searchByLastName(IEC.lastNameIn)" type="button" name="button" md-button>Submit</button>
     <div ng-repeat="intern in IEC.lastNameMatch.name">
         <md-content flex layout-padding>
-          <p>Intern:</p>{{intern.first_name}} {{intern.last_name}} {{intern.phone}}<button ng-click="IEC.removeIntern()" type="button" name="button" md-button>Remove</button>
+          <p>Intern:</p>{{intern.first_name}} {{intern.last_name}} {{intern.phone}}<button ng-click="IEC.removeIntern(intern.primarykey)" type="button" name="button" md-button>Remove</button>
         </md-content>
     </div>
   </md-input-container>
