--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -2,22 +2,23 @@
   <md-toolbar layout="column">
     <h1>Step-Up Check-In</h1>
   </md-toolbar>
-  <div class="importExport">
-    <h1>Import/Export</h1>
-  </div>
-  <h2>Add CRV file</h2><button ng-click="IEC.importInterns()" class="md-raised md-primary" type="button" name="button" md-button>Import</button>
-  <h2>Export Response Data</h2><button ng-click="IEC.exportResponseData()" class="md-raised md-primary" type="button" name="button" md-button>Export</button>
-  <br><br><br><br>
-  <h2>Remove Interns:</h2>
-  <h3>Lastname: </h3>
-  <md-input-container>
-    <label>Search by Lastname</label>
-    <input ng-model="IEC.lastNameIn" type="text">
-    <button ng-click="IEC.searchByLastName(IEC.lastNameIn)" class="md-raised md-primary" type="button" name="button" md-button>Submit</button>
-    <div ng-repeat="intern in IEC.lastNameMatch.name">
-      <md-content flex layout-padding>
-        <p>Intern:</p>{{intern.first_name}} {{intern.last_name}}
-        <span ng-show="intern.editMode" ><md-input-container><input ng-model="intern.phoneIn" type="text" ng-value="IEC.phone"></md-input-container></span>
+  <div class="importExportMain">
+    <div class="importExport">
+      <h1>Import/Export</h1>
+    </div>
+    <h2>Add CRV file</h2><button ng-click="IEC.importInterns()" class="md-raised md-primary" type="button" name="button" md-button>Import</button>
+    <h2>Export Response Data</h2><button ng-click="IEC.exportResponseData()" class="md-raised md-primary" type="button" name="button" md-button>Export</button>
+    <br><br><br><br>
+    <h2>Remove Interns:</h2>
+    <h3>Lastname: </h3>
+    <md-input-container>
+      <label>Search by Lastname</label>
+      <input ng-model="IEC.lastNameIn" type="text">
+      <button ng-click="IEC.searchByLastName(IEC.lastNameIn)" class="md-raised md-primary" type="button" name="button" md-button>Submit</button>
+      <div ng-repeat="intern in IEC.lastNameMatch.name">
+        <md-content flex layout-padding>
+          <p>Intern:</p>{{intern.first_name}} {{intern.last_name}}
+          <span ng-show="intern.editMode" ><md-input-container><input ng-model="intern.phoneIn" type="text" ng-value="IEC.phone"></md-input-container></span>
           <span ng-hide="intern.editMode" >{{intern.phone}}</span>
           <button ng-show="intern.editMode" ng-click="IEC.editPhone(intern.primarykey, intern.phoneIn)" class="md-raised md-primary" type="button" name="button" md-button>Save</button>
           <button ng-hide="intern.editMode" ng-click="intern.editMode = !intern.editMode" class="md-raised md-primary" type="button" name="edit" md-button>Edit Phone Number</button>
@@ -26,4 +27,5 @@
         </md-content>
       </div>
     </md-input-container>
-  </main>
+  </div>
+</main>
