--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -18,7 +18,7 @@
       <div ng-repeat="intern in IEC.lastNameMatch.name">
         <md-content flex layout-padding>
           <p>Intern:</p>{{intern.first_name}} {{intern.last_name}}
-          <span ng-show="intern.editMode" ><md-input-container><input ng-model="intern.phoneIn" type="text" ng-value="IEC.phone"></md-input-container></span>
+          <span ng-show="intern.editMode" ><md-input-container><label>{{intern.phone}}</label><input ng-model="intern.phoneIn" type="text" ng-value="IEC.phone"></md-input-container></span>
           <span ng-hide="intern.editMode" >{{intern.phone}}</span>
           <button ng-show="intern.editMode" ng-click="IEC.editPhone(intern.primarykey, intern.phoneIn)" class="md-raised md-primary" type="button" name="button" md-button>Save</button>
           <button ng-hide="intern.editMode" ng-click="intern.editMode = !intern.editMode" class="md-raised md-primary" type="button" name="edit" md-button>Edit Phone Number</button>
