made progress in update question

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,6 +9,8 @@
     <script src="public/vendors/angular-animate.min.js" charset="utf-8"></script>
     <script src="public/vendors/angular-aria.min.js" charset="utf-8"></script>
     <script src="public/vendors/angular-material.min.js" charset="utf-8"></script>
+    <!-- swal js -->
+    <script src="public/vendors/sweetalert.min.js" charset="utf-8"></script>
     <!-- js -->
     <script src="/public/scripts/client.js"></script>
     <script src="public/scripts/services/adminHomeService.js" charset="utf-8"></script>
@@ -24,6 +26,8 @@
     <script src="public/scripts/controllers/ImportExportController.js" charset="utf-8"></script>
     <script src="/public/scripts/controllers/navController.js"></script>
     <script src="public/scripts/controllers/updateQuestionsController.js" charset="utf-8"></script>
+    <!-- swal css -->
+    <link rel="stylesheet" href="public/vendors/sweetalert.css">
     <link rel="stylesheet" type="text/css" href="/public/vendors/normalize.css" />
     <!-- <link rel="stylesheet" href="public/vendors/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/public/styles/style.css">
