--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -90,3 +90,8 @@ Login
 /***************************
 updateQuestion
 ****************************/
+
+.updateQuestions {
+  /*text-align: center;*/
+  font-family: 'Oswald', sans-serif;
+}
