updated responsefeedback form

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -68,6 +68,10 @@ feddbackform
     transform: scale(2);
 }*/
 
+.feedbackform {
+  /*text-align: center;*/
+}
+
 /***************************
 Import-Export
 ****************************/
