--- a/public/views/templates/feedbackform.html
+++ b/public/views/templates/feedbackform.html
@@ -1,108 +1,99 @@
 <md-toolbar layout="column">
-	<h1>Step-Up Check-In Week X </h1>
+	<h1>Step-Up Check-In </h1>
 </md-toolbar>
 
 
-<DIV class = "feedbackform" ng-init="">
+<DIV class="feedbackform" ng-init="">
 
-    <md-button ng-click="FBFC.getQuestions()">Get Questions</md-button>
+	<md-button ng-click="FBFC.getQuestions()">Get Questions</md-button>
+	<div>
+		<form ng-submit="submit()" ng-cloak>
+			<h3>Question 1: To what extent do you feel properly trained for your internship? </h3>
 
+			<!-- NOTE -->
+			<!-- each question will have to come dynamically from the get questions route, and also bring along it's question id -->
 
-    <div>
-    <form ng-submit="submit()" ng-cloak>
-      <h3>Question 1: To what extent do you feel properly trained for your internship? </h3>
-      <p>Selected Value: <span class="radioValue">{{ data.group1 }}</span> </p>
+			<!-- <p>Selected Value: <span class="radioValue">{{ group1 }}</span> </p> -->
 
-      <md-radio-group ng-model="data.group1">
+			<md-radio-group ng-model="group1">
 
-        <md-radio-button value = "1" ng-model="FBFC.q1response"> not properly trained at all </md-radio-button>
-        <md-radio-button value = "2" ng-model="FBFC.q1response"> not properly trained </md-radio-button>
-        <md-radio-button value = "3" ng-model="FBFC.q1response"> somewhat properly trained</md-radio-button>
-        <md-radio-button value = "4" ng-model="FBFC.q1response"> properly trained</md-radio-button>
-        <md-radio-button value = "5" ng-model="FBFC.q1response"> very properly trained</md-radio-button>
+				<md-radio-button value="1"> not properly trained at all </md-radio-button>
+				<md-radio-button value="2"> not properly trained </md-radio-button>
+				<md-radio-button value="3"> somewhat properly trained</md-radio-button>
+				<md-radio-button value="4"> properly trained</md-radio-button>
+				<md-radio-button value="5"> very properly trained</md-radio-button>
 
+			</md-radio-group>
 
-      </md-radio-group>
+			<h3>Question 2: How challenging are your daily work tasks? </h3>
+			<!-- <p>Selected Value: <span class="radioValue">{{ group2 }}</span> </p> -->
 
+			<md-radio-group ng-model="group2">
 
+				<md-radio-button value="1">not challenging at all</md-radio-button>
+				<md-radio-button value="2">not very challenging</md-radio-button>
+				<md-radio-button value="3">somewhat challenging</md-radio-button>
+				<md-radio-button value="4">challenging</md-radio-button>
+				<md-radio-button value="5">very challenging</md-radio-button>
 
-    <h3>Question 2: How challenging are your daily work tasks? </h3>
-    <p>Selected Value: <span class="radioValue">{{ data.group2 }}</span> </p>
+			</md-radio-group>
 
-    <md-radio-group ng-model="data.group2">
+			<h3>Question 3: How supportive is your supervisor? </h3>
+			<!-- <p>Selected Value: <span class="radioValue">{{ group3 }}</span> </p> -->
 
-      <md-radio-button value = "1" ng-model="FBFC.q2response">not challenging at all</md-radio-button>
-      <md-radio-button value = "2" ng-model="FBFC.q2response">not very challenging</md-radio-button>
-      <md-radio-button value = "3" ng-model="FBFC.q2response">somewhat challenging</md-radio-button>
-      <md-radio-button value = "4" ng-model="FBFC.q2response">challenging</md-radio-button>
-      <md-radio-button value = "5" ng-model="FBFC.q2response">very challenging</md-radio-button>
+			<md-radio-group ng-model="group3">
 
+				<md-radio-button value="1">not supportive at all</md-radio-button>
+				<md-radio-button value="2">not very supportive</md-radio-button>
+				<md-radio-button value="3">somewhat supportive</md-radio-button>
+				<md-radio-button value="4">supportive</md-radio-button>
+				<md-radio-button value="5">very supportive</md-radio-button>
 
-    </md-radio-group>
+			</md-radio-group>
 
+			<h3>Question 4: Do you like your internship? </h3>
+			<!-- <p>Selected Value: <span class="radioValue">{{ group4 }}</span> </p> -->
 
-    <h3>Question 3: How supportive is your supervisor? </h3>
+			<md-radio-group ng-model="group4">
 
+				<md-radio-button value="1">I do not like my internship at all</md-radio-button>
+				<md-radio-button value="2">I don't really like my internship</md-radio-button>
+				<md-radio-button value="3">My internship is okay</md-radio-button>
+				<md-radio-button value="4">I like my internship</md-radio-button>
+				<md-radio-button value="5">I like my internship very much!</md-radio-button>
 
-    <p>Selected Value: <span class="radioValue">{{ data.group3 }}</span> </p>
-
-    <md-radio-group ng-model="data.group3">
-
-      <md-radio-button value = "1" ng-model="FBFC.q3response">not supportive at all</md-radio-button>
-      <md-radio-button value = "2" ng-model="FBFC.q3response">not very supportive</md-radio-button>
-      <md-radio-button value = "3" ng-model="FBFC.q3response">somewhat supportive</md-radio-button>
-      <md-radio-button value = "4" ng-model="FBFC.q3response">supportive</md-radio-button>
-      <md-radio-button value = "5" ng-model="FBFC.q3response">very supportive</md-radio-button>
-
-    </md-radio-group>
-
-    <h3>Question 4: Do you like your internship? </h3>
-    <p>Selected Value: <span class="radioValue">{{ data.group4 }}</span> </p>
-
-    <md-radio-group ng-model="data.group4">
-
-      <md-radio-button value = "1" ng-model="FBFC.q4response">1, I do not like my internship at all</md-radio-button>
-      <md-radio-button value = "2" ng-model="FBFC.q4response">2, I don't really like my internship</md-radio-button>
-      <md-radio-button value = "3" ng-model="FBFC.q4response">3, My internship is okay</md-radio-button>
-      <md-radio-button value = "4" ng-model="FBFC.q4response">4, I like my internship</md-radio-button>
-      <md-radio-button value = "5" ng-model="FBFC.q4response">5, I like my internship very much!</md-radio-button>
-
-    </md-radio-group>
+			</md-radio-group>
 
 
-    <h3>Question 5: Do you feel welcome in your workplace? </h3>
+			<h3>Question 5: Do you feel welcome in your workplace? </h3>
+			<!-- <p>Selected Value: <span class="radioValue">{{ group5 }}</span> </p> -->
 
-    <p>Selected Value: <span class="radioValue">{{ data.group5 }}</span> </p>
+			<md-radio-group ng-model="group5">
 
-    <md-radio-group ng-model="data.group5">
+				<md-radio-button value="1">I do not feel welcome in my workplace at all</md-radio-button>
+				<md-radio-button value="2">I do not feel very welcome in my workplace</md-radio-button>
+				<md-radio-button value="3">I feel somewhat welcome in my workplace</md-radio-button>
+				<md-radio-button value="4">I feel welcome in my workplace</md-radio-button>
+				<md-radio-button value="5">I feel very welcome in my workplace</md-radio-button>
 
-      <md-radio-button value = "1" ng-model="FBFC.q5response">I do not feel welcome in my workplace at all</md-radio-button>
-      <md-radio-button value = "2" ng-model="FBFC.q5response">I do not feel very welcome in my workplace</md-radio-button>
-      <md-radio-button  value = "3" ng-model="FBFC.q5response">I feel somewhat welcome in my workplace</md-radio-button>
-      <md-radio-button value = "4" ng-model="FBFC.q4response">I feel welcome in my workplace</md-radio-button>
-      <md-radio-button value = "5" ng-model="FBFC.q4response">I feel very welcome in my workplace</md-radio-button>
+			</md-radio-group>
 
-    </md-radio-group>
+			<br />
+			<h3>Do you want someone from STEP-UP to contact you this week?</h3>
+			<div flex-gt-sm="50">
+				<md-checkbox ng-model="cb1" aria-label="Checkbox 1">
+					Yes, please talk with me. {{ cb1 }}
+				</md-checkbox>
+			</div>
 
-    <br />
-    <h3>Do you want someone from STEP-UP to contact you this week?</h3>
-    <div flex-gt-sm="50">
-              <md-checkbox ng-model="data.cb1" aria-label="Checkbox 1">
-              Yes, please talk with me. {{ data.cb1 }}
-              </md-checkbox>
-            </div>
+			<h3>Do you have any other comments?</h3>
+			<md-input-container>
+				<label>Write here:</label>
+				<input ng-model="comment">
+			</md-input-container>
 
-<!-- ng-model="FBFC.checkbox">  -->
-    <h3>Do you have any other comments?</h3>
-    <md-input-container>
-            <label>Write here:</label>
-            <input ng-model="data.comment">
-          </md-input-container>
+			<br />
 
-    <!-- <input type="text" placeholder="write comments here" name="" value="" ng-model="FBFC.comment"> -->
-    <br />
+			<md-button ng-click="FBFC.submitFeedback(group1, group2, group3, group4, group5, comment, cb1)">Submit</md-button>
 
-<!-- //something weird is happening here: -->
-    <md-button ng-click="FBFC.submitFeedback(FBFC.q1response.value, FBFC.q2response.value, FBFC.q3response.value, FBFC.q4response.value, FBFC.q5response.value, FBFC.comment, FBFC.checkbox)">Submit</md-button>
-
-</DIV>
+	</DIV>
