--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -45,7 +45,7 @@
           Yes, this is a flagged question.
         </md-checkbox>
       </md-input-container>
-      <md-button ng-click ="UQC.addQuestion(UQC.questionIn)" class="md-raised md-primary">Add Question</md-button>
+      <md-button ng-click ="UQC.addQuestion(UQC.questionIn, UQC.flaggedIn)" class="md-raised md-primary">Add Question</md-button>
     </div>
     <br><br>
     <md-button ng-click ="UQC.addQuestion()" class="md-raised md-primary">Send Questions</md-button>
