--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -12,9 +12,14 @@
 	</md-content>
 </div>
 <h2>Step up Staff</h2>
-<div ng-init="AHC.getAllAdmins()">
+<div ng-init="AHC.getAllAdmins(firstname, lastname, email)">
 	<md-content layout="column" layout-gt-sm="row" layout-padding>
-
+  <div ng-repeat="admin in AHC.adminArray">
+    <h4>{{admin.firstname}}</h4>
+    <h4>{{admin.lastname}}</h4>
+    <h4>{{admin.email}}</h4>
+  </div>
+  {{admin}}{{AHC}}
 		<md-divider ></md-divider>
 	</md-content>
 </div>
