--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -12,14 +12,14 @@
 	</md-content>
 </div>
 <h2>Step up Staff</h2>
-<div ng-init="AHC.getAllAdmins(firstname, lastname, email)">
+<div ng-init="AHC.getAdmins()">
 	<md-content layout="column" layout-gt-sm="row" layout-padding>
-  <div ng-repeat="admin in AHC.adminArray">
-    <h4>{{admin.firstname}}</h4>
-    <h4>{{admin.lastname}}</h4>
-    <h4>{{admin.email}}</h4>
-  </div>
-  {{admin}}{{AHC}}
+		<div ng-repeat="admin in AHC.adminArray">
+			<h4>{{admin.firstname}}</h4>
+			<h4>{{admin.lastname}}</h4>
+			<h4>{{admin.email}}</h4>
+		</div>
+		{{admin}}{{AHC}}
 		<md-divider ></md-divider>
 	</md-content>
 </div>
@@ -28,18 +28,18 @@
 	<md-content>
 		<md-input-container>
 			<label>First Name</label>
-			<input type="name">
+			<input ng-model="AHC.adminFirstNameIn" type="name">
 		</md-input-container>
 
 		<md-input-container>
 			<label>Last Name</label>
-			<input type="name">
+			<input ng-model="AHC.adminLastNameIn" type="name">
 		</md-input-container>
 
 		<md-input-container>
 			<label>Email</label>
-			<input type="email">
+			<input ng-model="AHC.adminEmailIn" type="email">
 		</md-input-container>
-    <button md-button>Add New Admin</button>
+		<button ng-click="AHC.postAdmins(AHC.adminFirstNameIn, AHC.adminLastNameIn, AHC.adminEmailIn)" md-button>Add New Admin</button>
 	</md-content>
 </div>
