--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -52,7 +52,9 @@ body {
 /***************************
 admin-home
 ****************************/
-
+.enterLink {
+  text-align: center;
+}
 
 /***************************
 admin-intern
