--- a/public/views/templates/login.html
+++ b/public/views/templates/login.html
@@ -7,7 +7,7 @@
 </section>
 <!-- Shown for users that are logged in -->
 <section ng-show="auth.loggedIn">
-  <p>
-    You are logged in!
-  </p>
+  <h3 class="enterLink">
+    <a href="#admin-home">You are logged in! Click to enter.</a>
+  </h3>
 </section>
