started twilio intergration

--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -48,7 +48,7 @@
       <md-button ng-click ="UQC.addQuestion(UQC.questionIn, UQC.flaggedIn)" class="md-raised md-primary">Add Question</md-button>
     </div>
     <br><br>
-    <md-button ng-click ="UQC.addQuestion()" class="md-raised md-primary">Send Questions</md-button>
+    <md-button ng-click ="UQC.sendQuestion()" class="md-raised md-primary">Send Questions</md-button>
   </div>
 </main>
 
