added comment tabs

--- a/public/views/templates/admin-intern.html
+++ b/public/views/templates/admin-intern.html
@@ -30,6 +30,9 @@
     <li>FirstName, LastName, Phone</li>
   </ul>
   <h2>This week's comments</h2>
-  <p>Woohoo this is the start</p>
-  <p>Caribou rocks</p>
-  <li><a href="">View All</a></li>
+  <md-tabs>
+    <md-tab label="Comment #1"><p>Woohoo this is the start</p></md-tab>
+    <md-tab label="Comment #2"><p>Caribou rocks</p></md-tab>
+    <md-tab label="Comment #3"></md-tab>
+    <md-tab><a href="" md-highlight-text="searchTerm">View All</a></md-tab>
+  </md-tabs>
