added md-list items

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -59,7 +59,9 @@ admin-home
 /***************************
 admin-intern
 ****************************/
-
+.adminIntern {
+  margin-left: 3vmin;
+}
 
 /***************************
 feddbackform
