got rid of pesky dot on main page

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -45,15 +45,15 @@
               <h2 class="CheckIn">Check-<span class="CheckInSpan">In</span></h2>
             </h1>
             <nav id="homepage">
-              <ul>
+              <md-list>
                 <a href="#admin-home">Home</a>
                 <a href="#admin-intern">Interns</a>
                 <a href="#updateQuestions">Update Questions</a>
                 <a href="#importExport">Import/Export</a>
                 <a href="#feedbackform">Feedback</a>
                 <a href="#" ng-click="nav.logout()">Logout</a>
-                <li class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></li>
-              </ul>
+                <md-list class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
+              </md-list>
             </nav>
             <!-- Show a helpful message when needed -->
             <section id="message" class="nav.message.type" ng-show="nav.message.text">
