--- a/public/views/index.html
+++ b/public/views/index.html
@@ -43,18 +43,31 @@
             <h1 class="StepUp">
               <img class="stepUp" src="public/image/STEP-UP logo no tag with white.jpg">
               <h2 class="CheckIn">Check-<span class="CheckInSpan">In</span></h2>
+              <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
             </h1>
-            <nav id="homepage">
+            <div layout="row" layout-align="center" ng-show="nav.navBar">
+            	<md-content class="md-padding">
+            		<md-nav-bar class="navBar">
+            			<md-nav-item md-nav-href="#admin-home" name="Home">Home</md-nav-item>
+            			<md-nav-item md-nav-href="#admin-intern" name="Interns">Interns</md-nav-item>
+            			<md-nav-item md-nav-href="#updateQuestions" name="Update Questions">Update Questions</md-nav-item>
+            			<md-nav-item md-nav-href="#importExport" name="Import/Export">Import/Export</md-nav-item>
+                </md-nav-bar>
+            	</md-content>
+            </div>
+            <md-toolbar layout="column" ng-show="nav.toolbar">
+            	<h1>Step-Up Check-In</h1>
+            </md-toolbar>
+            <!-- <nav id="homepage" ng-show="nav.navBar">
               <md-list>
                 <a href="#admin-home">Home</a>
                 <a href="#admin-intern">Interns</a>
                 <a href="#updateQuestions">Update Questions</a>
                 <a href="#importExport">Import/Export</a>
                 <a href="#feedbackform">Feedback</a>
-                <a href="#" ng-click="nav.logout()">Logout</a>
                 <md-list class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
               </md-list>
-            </nav>
+            </nav> -->
             <!-- Show a helpful message when needed -->
             <section id="message" class="nav.message.type" ng-show="nav.message.text">
                 {{nav.message.text}}
