styled toolbar and buttons to step-up color scheme

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -55,8 +55,8 @@
                 </md-nav-bar>
             	</md-content>
             </div>
-            <md-toolbar layout="column" ng-show="nav.toolbar">
-            	<h1>Step-Up Check-In</h1>
+            <md-toolbar id="toolbar" layout="column" ng-show="nav.toolbar">
+            	<h1 id="toolBarText">Step-Up Check-In</h1>
             </md-toolbar>
             <!-- <nav id="homepage" ng-show="nav.navBar">
               <md-list>
