--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,6 +2,15 @@
 General/Index
 ****************************/
 
+#toolbar {
+  background-color: #008AC0;
+  color: #F68628;
+}
+
+#toolBarText {
+  margin-left: 3vmin;
+}
+
 .StepUp {
   text-align: center;
 }
@@ -81,6 +90,10 @@ Import-Export
 ****************************/
 .importExportMain {
   margin-left: 3vmin;
+}
+
+.mainButtons {
+  background-color: #008AC0;
 }
 
 /***************************
