--- a/public/views/templates/admin-home.html
+++ b/public/views/templates/admin-home.html
@@ -18,6 +18,7 @@
 			<h4>{{admin.firstname}}</h4>
 			<h4>{{admin.lastname}}</h4>
 			<h4>{{admin.email}}</h4>
+      <button ng-click="AHC.deleteAdmins(admin.id)" md-button>Remove</button>
 		</div>
 		<md-divider ></md-divider>
 	</md-content>
