--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,9 +2,13 @@
 General/Index
 ****************************/
 
+html, body, nav {
+  background-color: #faf0e6;
+}
+
 #toolbar {
   background-color: #008AC0;
-  color: #F68628;
+  color: white;
 }
 
 #toolBarText {
@@ -16,10 +20,11 @@ General/Index
 }
 
 .stepUp {
-  height: 20vw;
-  width: 50%;
-  margin: -1em;
-  padding: 10px;
+  height: 35%;
+  width: 35%;
+  margin: auto;
+  /*margin: -1em;*/
+  /*padding: 10px;*/
 }
 
 .CheckIn {
