--- a/public/views/templates/importExport.html
+++ b/public/views/templates/importExport.html
@@ -5,7 +5,7 @@
     </div>
     <h2>Upload CSV file to Import Interns</h2>
     <input id="fileInput" type="file">
-    <md-button class="md-raised md-primary" ng-click="IEC.uploadInterns()" style="background-color: #008AC0">
+    <md-button class="md-raised md-primary" ng-click="IEC.importInterns()" style="background-color: #008AC0">
       <label>Import Interns</label>
     </md-button>
 
@@ -23,9 +23,9 @@
           <p>Intern:</p>{{intern.first_name}} {{intern.last_name}}
           <span ng-show="intern.editMode" ><md-input-container><label>{{intern.phone}}</label><input ng-model="intern.phoneIn" type="text" ng-value="IEC.phone"></md-input-container></span>
           <span ng-hide="intern.editMode" >{{intern.phone}}</span>
-          <button ng-show="intern.editMode" ng-click="IEC.editPhone(intern.primarykey, intern.phoneIn)" class="md-raised md-primary" type="button" name="button" md-button>Save</button>
-          <button ng-hide="intern.editMode" ng-click="intern.editMode = !intern.editMode" class="md-raised md-primary" type="button" name="edit" md-button>Edit Phone Number</button>
-          <button ng-show="intern.editMode" ng-click="intern.editMode = !intern.editMode" class="md-raised md-primary" type="button" name="button" md-button>Cancel Edit</button>
+          <button ng-show="intern.editMode" ng-click="IEC.editPhone(intern.primarykey, intern.phoneIn)" class="md-raised md-primary" type="button" name="button" style="background-color: #008AC0">Save</button>
+          <button ng-hide="intern.editMode" ng-click="intern.editMode = !intern.editMode" class="md-raised md-primary" type="button" name="edit" md-button style="background-color: #008AC0">Edit Phone Number</button>
+          <button ng-show="intern.editMode" ng-click="intern.editMode = !intern.editMode" class="md-raised md-primary" type="button" name="button" md-button style="background-color: #F68628">Cancel Edit</button>
           <button ng-hide="intern.editMode" ng-click="IEC.showConfirm($event); IEC.removeIntern(intern.primarykey)" class="md-raised md-warn" type="button" name="delete" md-button style="background-color: #F68628">Remove</button>
         </md-content>
       </div>
