--- a/public/views/templates/updateQuestions.html
+++ b/public/views/templates/updateQuestions.html
@@ -45,10 +45,10 @@
           Yes, this is a flagged question.
         </md-checkbox>
       </md-input-container>
-      <md-button ng-click ="UQC.addQuestion(UQC.questionIn, UQC.flaggedIn)" class="md-raised md-primary">Add Question</md-button>
+      <md-button ng-click ="UQC.addQuestion(UQC.questionIn, UQC.flaggedIn)" class="md-raised md-primary" style="background-color: #008AC0">Add Question</md-button>
     </div>
     <br><br>
-    <md-button ng-click ="UQC.addQuestion()" class="md-raised md-primary">Send Questions</md-button>
+    <md-button ng-click ="UQC.addQuestion()" class="md-raised md-primary" style="background-color: #008AC0">Send Questions</md-button>
   </div>
 </main>
 
