--- a/public/views/index.html
+++ b/public/views/index.html
@@ -46,7 +46,7 @@
       </div>
       <md-list layout="row" layout-align="center" class="six columns" ng-show="nav.displayLogout">Hi {{nav.username}}! | <a href="#" ng-click="nav.logout()">Logout</a></md-list>
       <div layout="row" layout-align="center" ng-show="nav.navBar">
-        <md-content class="md-padding">
+        <md-content class="md-padding navPad">
           <md-nav-bar class="navBar">
             <md-nav-item md-nav-href="#admin-home" name="Home">Home</md-nav-item>
             <md-nav-item md-nav-href="#admin-intern" name="Interns">Interns</md-nav-item>
